--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -819,6 +819,23 @@ section #title .credits.left {
 section #title .credits.right {
   float: right;
 }
+#footer {
+  max-width: 650px;
+  border: 0;
+  outline: none;
+  margin: 0 0 50px 0;
+  padding: 0 0 5px 0;
+  position:relative;
+  height:160px;
+}
+#footer p {
+  font-size: 11px;
+  text-align: center;
+  font-family: 'OpenSansRegular', "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-weight: normal;
+  color: #696969;
+  margin-top: -10px;
+}
 
 @media print, screen and (max-width: 720px) {
   #title .credits {
